--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+	"install:all": "concurrently \"npm install --prefix client\" \"npm install\" \"npm install --prefix server\"",
+	"build:all": "concurrently \"npm run build --prefix client\" \"npm run build --prefix server\"",
     "dev": "concurrently \"npm start --prefix server\" \"npm start --prefix client\"",
     "server": "npm start --prefix server",
     "client": "npm start --prefix client"
